--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,52 @@
 
 // External libraries
 // @@import "bootstrap/scss/bootstrap";
-@import "font-awesome";
+// @import "font-awesome";
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+html, body {
+  display: block;
+  height: 100vh;
+  width: 100%;
+  font-family: $font-family;
+  background-color: $white;
+  position: relative;
+}
+
+h1 {
+  font-size: 25px;
+  font-weight: $font-weight-bold;
+  color: $dark-gray;
+  padding-bottom: 20px;
+}
+
+h2 {
+  font-size: 17px;
+  font-weight: $font-weight-regular;
+  color: $dark-gray;
+  padding-bottom: 20px;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: $font-weight-regular;
+  color: $dark-gray;
+  padding-bottom: 20px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: $font-weight-regular;
+  color: $dark-gray;
+  padding-bottom: 20px;
+}
+
+p.menu {
+  font-size: 14px;
+  font-weight: $font-weight-light;
+  color: $dark-gray;
+  padding-bottom: 20px;
+}
