--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,42 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+//.navbar-lewagon {
+ // justify-content: space-between;
+  //background: white;
+//}
+
+//.navbar-lewagon .navbar-collapse {
+//  flex-grow: 0;
+//}
+
+//.navbar-lewagon .navbar-brand img {
+//  width: 40px;
+//}
+
+.navbar-container {
+  max-width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction:row;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.site-menu {
+  width: 200px;
+  height: 50px;
+  background-color: $terre;
+  border: solid $terre 0.5px;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.navbar {
+  width: 100vh;
+  height: 50px;
+  background-color: $white;
+  display: flex;
+  flex-direction: row;
+  border: solid $yellow 0.5px;
+}
+
+.navbar-left-menu {
+  width: 200px;
+  height: 100%;
+  background-color: $yellow;
+  border: solid $yellow 0.5px;
 }
