--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,12 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
+$red: #c0786a;
+$blue: #23B5D3;
+$yellow: #f6cf9a;
+$terre: #d0bc9f;
+$green: #65B891;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$white: white;
+$light-gray: #76737c;
+$dark-gray: #474454;
