--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 
 html, body {
   display: block;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
   font-family: $font-family;
   background-color: $white;
