--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,22 +12,23 @@
 //}
 
 .navbar-container {
-  max-width: 100%;
+  width: auto;
   height: 55px;
   display: flex;
   flex-direction:row;
+  justify-content: flex-start;
 }
 
-.site-menu {
+.loggin-menu {
   width: 200px;
-  height: 50px;
+  height: 55px;
   background-color: $terre;
   border: solid $terre 0.5px;
 }
 
 .navbar {
-  width: 100vh;
-  height: 50px;
+  width: 100%;
+  height: 55px;
   background-color: $white;
   display: flex;
   flex-direction: row;
