--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,6 @@
 <div class = "navbar-container">
-  <div class = "site-menu">
+  <div class = "loggin-menu">
   </div>
   <div class = "navbar">
   </div>
-</div>
-<div class = "navbar-left-menu">
 </div>
