--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,5 +2,18 @@
   <div class = "loggin-menu">
   </div>
   <div class = "navbar">
+  <div class = "search-icon-box-container" >
+      <%= image_tag "plus_icon.png", class: "icon" %>
+      <div class = "search-container search">
+        <%= image_tag "loupe_icon.png", class: "icon" %>
+        <p__margin-left>Search ...</p__margin-left>
+      </div>
+  </div>
+  </div>
+</div>
+<div class ="navbar-container">
+  <div class="navbar-left-menu ">
+  </div>
+  <div class = "display-area">
   </div>
 </div>
