--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,8 @@
 @import "config/bootstrap_variables";
 
 // External libraries
-// @@import "bootstrap/scss/bootstrap";
-// @import "font-awesome";
+//@import "bootstrap/scss/bootstrap";
+@import "font-awesome";
 
 // Your CSS partials
 @import "components/index";
@@ -13,8 +13,8 @@
 
 html, body {
   display: block;
-  height: 100%;
-  width: 100%;
+  height: 1024px;
+  width: 1440px;
   font-family: $font-family;
   background-color: $white;
   position: relative;
@@ -46,6 +46,10 @@ p {
   font-weight: $font-weight-regular;
   color: $dark-gray;
   padding-bottom: 20px;
+
+  &__margin-left{
+    margin-left: 10px
+  }
 }
 
 p.menu {
