--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,7 +12,7 @@
 //}
 
 .navbar-container {
-  width: auto;
+  width: 100%;
   height: 55px;
   display: flex;
   flex-direction:row;
@@ -29,15 +29,12 @@
 .navbar {
   width: 100%;
   height: 55px;
-  background-color: $white;
+  background-color: white;
   display: flex;
   flex-direction: row;
   border: solid $yellow 0.5px;
-}
-
-.navbar-left-menu {
-  width: 200px;
-  height: 100%;
-  background-color: $yellow;
-  border: solid $yellow 0.5px;
+  flex-wrap: nowrap;
+  align-content: stretch;
+  justify-content: flex-start;
+  align-items: center;
 }
