--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -3,4 +3,11 @@
   height: 15px;
   margin: 5px;
   color: $yellow;
+
+  &__small {
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    color: $yellow;
+  }
 }
