--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,7 @@
     </div>
     <div class="navbar-menu-right">
       <%= render "shared/project-search-box" %>
+    <!-- build the logic to display the company logo -->
       <%= image_tag "simpo_logo.png" %>
     </div>
   </div>
