left bar and button

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,8 +5,9 @@ $red: #c0786a;
 $blue: #23B5D3;
 $yellow: #f6cf9a;
 $terre: #d0bc9f;
+$camel: #c69c72;
 $green: #65B891;
 $gray: #0E0000;
 $white: white;
-$light-gray: #76737c;
+$light-gray: #76737C;
 $dark-gray: #474454;
