--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,3 +17,8 @@
       <%= image_tag "simpo_logo.png" %>
     </div>
   </div>
+  </div>
+  <div class = "btn2">
+      <%= image_tag "plus.png", class: "icon__button" %>
+    <p-button>New</p-button>
+  </div>
