--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,9 @@ p.menu {
   color: $dark-gray;
   padding-bottom: 20px;
 }
+
+p.button {
+  font-size: 14px;
+  font-weight: $font-weight-light;
+  color: $white;
+}
