--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -9,5 +9,12 @@
     height: 10px;
     margin: 5px;
     color: $yellow;
+
+  &__button {
+    width: 5px;
+    height: 5px;
+    margin: 5px;
+    color: $white;
+  }
   }
 }
