--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body><%= render "shared/navbar" %>
+        <%= render "shared/left_navbar" %>
 <%= render "shared/flashes" %>
 
     <%= yield %>
