--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,9 @@
     </div>
   </div>
   </div>
-  <div class = "btn2">
-      <%= image_tag "plus.png", class: "icon__button" %>
-    <p-button>New</p-button>
-  </div>
+  <%= render "shared/btn2" %>
+  <%= render "shared/btn" %>
+  <%= render "shared/btn-edit" %>
+  <%= render "shared/btn-green" %>
+  <%= render "shared/btn-green-small" %>
+  <%= render "shared/date-picker" %>
