--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -51,3 +51,17 @@
     border-radius: 50px;
   }
 }
+
+.date-container {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  flex-direction: row;
+  margin: 10px;
+  height: 27px;
+  width: 150px;
+  border: solid $yellow 0.5px;
+  align-items : space-between;
+  }
