--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-        <%= render "shared/left_navbar" %>
-<%= render "shared/flashes" %>
-
+  <body>
+    <%= render "shared/navbar" %>
+    <%= render "shared/left_navbar" %>
+    <%= render "shared/flashes" %>
     <%= yield %>
   </body>
 </html>
