--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,9 +18,5 @@
     </div>
   </div>
   </div>
-  <%= render "shared/btn2" %>
-  <%= render "shared/btn" %>
-  <%= render "shared/btn-edit" %>
-  <%= render "shared/btn-green" %>
-  <%= render "shared/btn-green-small" %>
-  <%= render "shared/date-picker" %>
+
+    <%= render "shared/kpi-card" %>
