--- a/app/views/shared/_kpi-card.html.erb
+++ b/app/views/shared/_kpi-card.html.erb
@@ -1,6 +1,9 @@
 <div class="kpi-card">
   <div class ="kpi-title-container">
     <p>Production in m3</p>
-    <p>Details </p>
+    <p>Details</p>
+  </div>
+  <div class="kpi-cata-container">
+    <h1>3000 L</h1>
   </div>
 </div>
