--- a/app/assets/stylesheets/components/_kpi-card.scss
+++ b/app/assets/stylesheets/components/_kpi-card.scss
@@ -6,9 +6,16 @@
 }
 
 .kpi-title-container {
-  margin: 5px;
+  margin: 10px;
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+
+}
+
+.kpi-data-container {
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
 }
