main page container

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,14 @@ p.button {
   font-weight: $font-weight-light;
   color: $white;
 }
+
+a {
+  color: $dark-gray;
+  text-decoration : none;
+
+
+  &:hover {
+    color: $dark-gray;
+    text-decoration : none;
+  }
+}
