--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
+<div class="background">
 <h2>Sign up</h2>
+<h3>test</h3>
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -23,3 +26,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
