--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,4 @@
+  <%= render "shared/flashes" %>
   <%= render "shared/navbar" %>
     <div class="page-container">
       <%= render "shared/left_navbar" %>
@@ -8,3 +9,4 @@
     </div>
     </div>
   </div>
+ <%= console %>
