--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-container">
+<div class="navbar-container col-sm-6">
   <div class="navbar-user-container">
     <div class="user-container">
       <p class="menu"> Raheem Alibhai</p>
