--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,7 @@
     <div class="main-text">
     <div class="menu-container">
       <h1>Dashboard</h1>
-      <%= cl_image_tag("zqdo95fawx9svequg7g8", width: 400, height: 300, crop: :fill) %>
+      <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}  %>
     </div>
     </div>
   </div>
