--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,17 +1,23 @@
 // Specific CSS for your home-page
 /* Dropdown Button */
 .dropbtn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
+  //background-color: #04AA6D;
+  color: $camel;
+  //padding: 16px;
+  //font-size: 16px;
   border: none;
+    width: 37px;
+  height: 37px;
+  border-radius: 50%;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
 }
 
 /* Dropdown Content (Hidden by Default) */
